# sea-battle-sfml

./: .gitignore  CMakeLists.txt  README.md
include/: Board.hpp  Cell.hpp  Constants.hpp  Game.hpp  Ship.hpp
src/: Board.cpp  Cell.cpp  Game.cpp  Ship.cpp  main.cpp
